--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "s16-technical-test",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "sequelize": "^6.21.3"
-  },
-  "devDependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.13",
-    "@types/sequelize": "^4.28.14",
-    "typescript": "^4.7.4"
-  }
+    "name": "s16-technical-test",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node -r dotenv/config .",
+        "start-watch": "nodemon --delay 5000ms --exec npm run start",
+        "build": "tsc",
+        "build-watch": "tsc -w",
+        "prettier": "prettier --config .prettierrc --write ."
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "dotenv": "^16.0.1",
+        "express": "^4.18.1",
+        "sequelize": "^6.21.3",
+        "winston": "^3.8.1"
+    },
+    "devDependencies": {
+        "@types/dotenv": "^8.2.0",
+        "@types/express": "^4.17.13",
+        "@types/sequelize": "^4.28.14",
+        "nodemon": "^2.0.19",
+        "prettier": "^2.7.1",
+        "typescript": "^4.7.4"
+    }
 }
