--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "s16-technical-test",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "dist/index.js",
     "scripts": {
         "start": "node -r dotenv/config .",
         "start-watch": "nodemon --delay 5000ms --exec npm run start",
