--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.0.1",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
+        "jsonwebtoken": "^8.5.1",
         "mysql2": "^2.3.3",
+        "pg": "^8.7.3",
+        "pg-hstore": "^2.3.4",
         "sequelize": "^6.21.3",
         "winston": "^3.8.1"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.13",
         "@types/sequelize": "^4.28.14",
