--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/bcrypt": "^5.0.0",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^8.5.8",
         "@types/sequelize": "^4.28.14",
         "nodemon": "^2.0.19",
         "prettier": "^2.7.1",
