--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
         "@types/bcrypt": "^5.0.0",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.13",
+        "@types/jest": "^28.1.6",
         "@types/jsonwebtoken": "^8.5.8",
         "@types/sequelize": "^4.28.14",
+        "jest": "^28.1.3",
         "nodemon": "^2.0.19",
         "prettier": "^2.7.1",
         "typescript": "^4.7.4"
